--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -315,6 +315,10 @@ input, select, textarea {
 					padding-top: 2.5em;
 				}
 
+				.align-center {
+					text-align: center;
+				}
+
 		@media screen and (max-width: 1680px) {
 
 			.row {
