--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,9 +1,8 @@
 <h1>Articles</h1>
-
 <ul>
   <% @articles.each do |article| %>
     <li>
-      <%= link_to article.title, article %>
+      <%= link_to article.title, article %>, <%= article.created_date %>
     </li>
   <% end %>
 </ul>
