--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,4 @@
+<%= link_to "< Back", articles_path %>
 <h1><%= @article.title %></h1>
 <h4><%= @article.created_date %></h2>
 <p><%= @article.body %></p>
