--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,8 +1,12 @@
 <%= link_to "< Back", articles_path %>
-<h1><%= @article.title %></h1>
-<h4><%= @article.created_date %></h2>
-<p><%= @article.body %></p>
-<ul>
-  <li><%= link_to "Edit", edit_article_path(@article) %></li>
-  <li><%= link_to "Delete", article_path(@article), data: {turbo_method: :delete, turbo_config: "Are you sure?"} %></li>
-</ul>
+<article>
+  <header>
+    <h1><%= @article.title %></h1>
+    <h4><time><%= @article.created_date %></time></h4>
+  </header>
+  <p><%= @article.body %></p>
+  <ul>
+    <li><%= link_to "Edit", edit_article_path(@article) %></li>
+    <li><%= link_to "Delete", article_path(@article), data: {turbo_method: :delete, turbo_config: "Are you sure?"} %></li>
+  </ul>
+</article>
