--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Articles</h1>
-My blog has <%= Article.public_count %> articles.
+My blog has <%= pluralize(@articles.length, "article") %>.
 <ul>
   <% @articles.each do |article| %>
     <li>
