--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -96,6 +96,8 @@ form input[type="submit"] {
 
 nav {
   padding: 2rem;
+  display: flex;
+  justify-content: space-between;
 }
 
 nav .current {
@@ -121,7 +123,6 @@ nav a {
 
 a {
   text-decoration: none;
-  /* font-variant: all-small-caps; */
 }
 
 a:any-link {
@@ -136,4 +137,16 @@ a:hover {
 
 a:active {
   color: rgb(178, 220, 214);
+}
+
+/* Flash messages */
+
+.notice {
+  padding: 0.5rem;
+  background-color: rgb(196, 216, 221);
+}
+
+.alert {
+  padding: 0.5rem;
+  background-color: rgb(222, 180, 179);
 }
