--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,9 +1,12 @@
 <h1>Articles</h1>
 My blog has <%= pluralize(@articles.length, "article") %>.
+<% if user_signed_in? %>
+  <%= link_to "New", new_article_path %>
+<% end %>
 <ul>
   <% @articles.each do |article| %>
     <li>
-      <%= link_to article.title, article %>, <%= article.created_date %>
+      <%= link_to (user_signed_in? ? "[#{article.status}] #{article.title}" : "#{article.title}"), article %>, <%= article.created_date %>
     </li>
   <% end %>
 </ul>
