--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Articles</h1>
 My blog has <%= pluralize(@articles.length, "article") %>.
 <% if user_signed_in? %>
-  <%= link_to "New", new_article_path %>
+  <%= button_to "New Article", new_article_path, {form_class: "inline", method: "get"} %>
 <% end %>
 <ul>
   <% @articles.each do |article| %>
