--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,7 @@
  *= require normalize-rails
  *= require_tree .
  *= require_self
+ *= require app/assets/stylesheets/actiontext.css
  */
 
 @font-face {
