--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -12,7 +12,7 @@
   </p>
   <p>
     <%= form.label :body %><br>
-    <%= form.text_area :body, rows: 10 %>
+    <%= form.rich_text_area :body %>
     <% article.errors.full_messages_for(:body).each do |message| %>
       <div><%= message %></div>
     <% end %>
