--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,6 +2,7 @@
 <% if user_signed_in? %>
   <%= button_to "New Article", new_article_path, {form_class: "inline", method: "get"} %>
 <% end %>
+<%# TODO: This should probably be a table. %>
 <ul class="article-list">
   <% @articles.each do |article| %>
     <li>
